--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.4.5",
     "next": "^14.2.30",
+    "openai": "^4.20.0",
     "react": "^18",
     "react-dom": "^18"
   },
